# regtech-mail-api

./: Dockerfile  README.md  buildspec.yml  data.json  pyproject.toml
.github/workflows/: build.yml  coverage.yml  linters.yml  tests.yml
htmlcov/: class_index.html  d_2b4c80f5c19ab68e_api_py.html  d_2b4c80f5c19ab68e_mailer_py.html  d_2b4c80f5c19ab68e_models_py.html  d_2b4c80f5c19ab68e_settings_py.html  d_a502c70ce16d1f16_api_py.html  d_a502c70ce16d1f16_mailer_py.html  d_a502c70ce16d1f16_models_py.html  d_a502c70ce16d1f16_settings_py.html  function_index.html  index.html  status.json  z_a502c70ce16d1f16_api_py.html  z_a502c70ce16d1f16_internal_py.html  z_a502c70ce16d1f16_mailer_py.html  z_a502c70ce16d1f16_models_py.html  z_a502c70ce16d1f16_public_py.html  z_a502c70ce16d1f16_settings_py.html
mailpit_chart/: values.yaml
mailpit_chart/templates/: deployment.yaml
regtech_mail_api/: api.py  mailer.py  models.py  settings.py
src/regtech_mail_api/: api.py  internal.py  mailer.py  public.py  settings.py
tests/: test_authentication.py  test_send.py  test_settings.py
