[tool.poetry]
name = "regtech-mail-api"
version = "0.1.0"
description = ""
authors = ["CFPB's RegTech Team"]
readme = "README.md"
packages = [
    { include = "regtech_mail_api" }
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.0"}
uvicorn = "^0.27.0.post1"
pyyaml = "^6.0.1"
email-validator = "^2.1.0.post1"
python-multipart = "^0.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
