[tool.poetry]
name = "regtech-mail-api"
version = "0.1.0"
description = ""
authors = ["CFPB's RegTech Team"]
readme = "README.md"
packages = [
    { include = "regtech_mail_api" }
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = "^0.27.0.post1"
pyyaml = "^6.0.1"
email-validator = "^2.1.0.post1"
python-multipart = "^0.0.7"
regtech-api-commons = {git = "https://github.com/cfpb/regtech-api-commons.git"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"


[tool.poetry.group.linters.dependencies]
ruff = "^0.1.15"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["regtech_mail_api"]
testpaths = ["tests"]
env = [
  "KC_URL=http://localhost",
  "KC_REALM=",
  "KC_ADMIN_CLIENT_ID=",
  "KC_ADMIN_CLIENT_SECRET=",
  "KC_REALM_URL=http://localhost",
  "AUTH_URL=http://localhost",
  "TOKEN_URL=http://localhost",
  "CERTS_URL=http://localhost",
  "AUTH_CLIENT=",
  "EMAIL_MAILER=mock",
  "FROM_ADDR=test@cfpb.gov",
  "TO=cases@localhost.localdomain"
]